trying to fix overflow

--- a/style.css
+++ b/style.css
@@ -98,5 +98,5 @@
   }
   .fb-like {
     overflow: hidden;
-    position: relative;
+    position: absolute;
   }
